--- a/public/stylesheets/view-admin.css
+++ b/public/stylesheets/view-admin.css
@@ -29,6 +29,10 @@ mdcms-toolwindow {
     display: block;
 }
 
+core-overlay {
+    background-color: white;
+}
+
 .mdcms-content.unfocused {
     opacity: .3;
     transition-property: opacity;
