--- a/public/components/markdown-editor/markdown-editor.html
+++ b/public/components/markdown-editor/markdown-editor.html
@@ -15,10 +15,12 @@
     <script>
         Polymer('markdown-editor', {
             resize: "both",
+            commands: {},
             attached: function () {
                 this.textarea = this.shadowRoot.querySelector("textarea");
                 this.textarea.value = this.value;
                 var md = Markdown.getSanitizingConverter();
+/*
                 this.features.getById = function(id) {
                     for (var i = 0; i < this.length; i++) {
                         var feature = this[i];
@@ -27,13 +29,26 @@
                         }
                     }
                 };
+*/
                 this.editor = new Markdown.Editor(md, this.textarea, {}, this);
             },
             domReady: function() {
+                var _this = this;
+                this.editor.hooks.chain("onPreviewRefresh", function(text) {
+//                    var message = {"mdcms-content-id": _this.mdCmsContentId, "html": _this.$["wmd-preview"].innerHTML};
+//                    _this.asyncFire("refresh-preview", message);
+                    _this.asyncFire("refresh-preview", {html: text});
+                });
                 this.editor.run();
-                this.doBold();
+                Array.prototype.slice.call(this.shadowRoot.querySelectorAll("core-icon-button")).forEach(function(button) {
+                    if (_this.commands[button.id]) {
+                        button.addEventListener("click", function() {
+                            _this.commands[button.id].execute();
+                        });
+                    }
+                });
             },
-            features: {
+/*            features: {
                 "wmd-bold-button": {icon: "bold"},
                 "wmd-italic-button": {icon: "italic"},
                 "wmd-link-button": {icon: "link"},
@@ -48,7 +63,7 @@
                 "wmd-redo-button": {icon: "redo"},
                 "wmd-help-button": {icon: "help"},
                 "wmd-save-button": {icon: "save"}
-                },
+                },*/
             get value() {
                 return this.textarea.value;
             },
@@ -66,26 +81,26 @@
                 resize: {{resize}};
             }
         </style>
-        <core-icon-button id="wmd-bold-button" icon="markdown-icons:bold"></core-icon-button>
-        <core-icon-button id="wmd-italic-button" icon="markdown-icons:italic"></core-icon-button>
+        <core-icon-button id="wmd-bold-button" disabled?={{!commands["wmd-bold-button"].enabled}}  icon="markdown-icons:bold"></core-icon-button>
+        <core-icon-button id="wmd-italic-button" disabled?={{!commands["wmd-italic-button"].enabled}}  icon="markdown-icons:italic"></core-icon-button>
         <core-icon icon="markdown-icons:spacer"></core-icon>
-        <core-icon-button id="wmd-link-button" icon="markdown-icons:link"></core-icon-button>
-        <core-icon-button id="wmd-quote-button" icon="markdown-icons:quote"></core-icon-button>
-        <core-icon-button id="wmd-code-button" icon="markdown-icons:code"></core-icon-button>
+        <core-icon-button id="wmd-link-button" disabled?={{!commands["wmd-link-button"].enabled}}  icon="markdown-icons:link"></core-icon-button>
+        <core-icon-button id="wmd-quote-button" disabled?={{!commands["wmd-quote-button"].enabled}}  icon="markdown-icons:quote"></core-icon-button>
+        <core-icon-button id="wmd-code-button" disabled?={{!commands["wmd-code-button"].enabled}}  icon="markdown-icons:code"></core-icon-button>
         <core-icon icon="markdown-icons:spacer"></core-icon>
-        <core-icon-button id="wmd-image-button" icon="markdown-icons:image"></core-icon-button>
+        <!--<core-icon-button id="wmd-image-button" disabled?={{!commands["wmd-image-button"].enabled}}  icon="markdown-icons:image"></core-icon-button>-->
+        <!--<core-icon icon="markdown-icons:spacer"></core-icon>-->
+        <core-icon-button id="wmd-olist-button" disabled?={{!commands["wmd-olist-button"].enabled}}  icon="markdown-icons:numbered-list"></core-icon-button>
+        <core-icon-button id="wmd-ulist-button" disabled?={{!commands["wmd-ulist-button"].enabled}}  icon="markdown-icons:bullet-list"></core-icon-button>
+        <core-icon-button id="wmd-heading-button" disabled?={{!commands["wmd-heading-button"].enabled}}  icon="markdown-icons:header"></core-icon-button>
+        <core-icon-button id="wmd-hr-button" disabled?={{!commands["wmd-hr-button"].enabled}}  icon="markdown-icons:rule"></core-icon-button>
         <core-icon icon="markdown-icons:spacer"></core-icon>
-        <core-icon-button id="wmd-olist-button" icon="markdown-icons:numbered-list"></core-icon-button>
-        <core-icon-button id="wmd-ulist-button" icon="markdown-icons:bullet-list"></core-icon-button>
-        <core-icon-button id="wmd-heading-button" icon="markdown-icons:header"></core-icon-button>
-        <core-icon-button id="wmd-hr-button" icon="markdown-icons:rule"></core-icon-button>
-        <core-icon icon="markdown-icons:spacer"></core-icon>
-        <core-icon-button id="wmd-undo-button" icon="markdown-icons:undo"></core-icon-button>
-        <core-icon-button id="wmd-redo-button" icon="markdown-icons:redo"></core-icon-button>
+        <core-icon-button id="wmd-undo-button" disabled?={{!commands["wmd-undo-button"].enabled}}  icon="markdown-icons:undo"></core-icon-button>
+        <core-icon-button id="wmd-redo-button" disabled?={{!commands["wmd-redo-button"].enabled}}  icon="markdown-icons:redo"></core-icon-button>
         <core-icon icon="markdown-icons:spacer"></core-icon>
         <core-icon-button icon="markdown-icons:help"></core-icon-button>
-        <core-icon-button id="wmd-save-button" src="../../components/save-icon.png"></core-icon-button>
-
+        <core-icon-button id="wmd-save-button" disabled?={{!commands["wmd-save-button"].enabled}}  src="../../components/save-icon.png"></core-icon-button>
+        <br/>
         <textarea rows="{{rows}}" cols="{{cols}}">
         </textarea>
         <div id="preview"></div>
